syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.imulab.astrea.sdk.flow";
option java_outer_classname = "AuthorizeCodeFlowProto";

package client;

service AuthorizeCodeFlow {
    rpc Authorize (CodeRequest) returns (CodeResponse);
    rpc Exchange (TokenRequest) returns (TokenResponse);
}

message CodeRequest {
    string id = 1;
    int64 requestTime = 2;
    repeated string responseTypes = 3;
    string redirectUri = 4;
    string state = 5;
    repeated string scopes = 6;
    Client client = 7;
    Session session = 8;

    message Client {
        string id = 1;
        repeated string responseTypes = 2;
        repeated string redirectUris = 3;
        repeated string scopes = 4;
    }

    message Session {
        string subject = 1;
        repeated string grantedScopes = 2;
        int64 authenticationTime = 3;
        repeated string acrValues = 4;
        string nonce = 5;
    }
}

message CodeResponse {
    bool success = 1;
    CodePackage data = 2;
    Failure failure = 3;
}

message TokenRequest {
    string id = 1;
    int64 requestTime = 2;
    string grantType = 3;
    string code = 4;
    string redirectUri = 5;
    Client client = 6;

    message Client {
        string id = 1;
        repeated string grantTypes = 2;
        repeated string redirectUris = 3;
        string jwks = 4;
        string sectorIdentifierUri = 5;
        string subjectType = 6;
        string idTokenSignedResponseAlgorithm = 7;
        string idTokenEncryptedResponseAlgorithm = 8;
        string idTokenEncryptedResponseEncoding = 9;
    }
}

message TokenResponse {
    bool success = 1;
    TokenPackage data = 2;
    Failure failure = 3;
}

message CodePackage {
    string code = 1;
    repeated string scopes = 2;
}

message TokenPackage {
    string accessToken = 1;
    string tokenType = 2;
    int64 expiresIn = 3;
    string refreshToken = 4;
    string idToken = 5;
}

message Failure {
    string error = 1;
    string description = 2;
    int32 status = 3;
    map<string, string> headers = 4;
}